robotic-codes/src/test/test_ucase.txt
test_ucase.cpp: In function ‘int main()’:
test_ucase.cpp:10:15: error: ‘ucase’ is not a member of ‘atrlib’
   s = atrlib::ucase(s);
               ^~~~~
